# TparkSem1C

./: .travis.yml  CMakeLists.txt  README.md  run.sh  stress_tests.sh
gen_data/: main.cpp
include/: io_data.h  vector.h
linters/: run.sh
project/include/: array.h  array_optimised.h  io_data.h  matrix.h  matrix_optimised.h  vector.h
project/src/: array.c  array_optimised.c  io_data.c  main.c  matrix.c  matrix_naive.c  matrix_optimised.c  vector.c
src/: io_data.c  main.c  vector.c
tests/: main.cpp  test_io_data.cpp  test_matrix.cpp  test_vector.cpp  utils.cpp  utils.h
